fix margin in table on mobile

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -196,7 +196,7 @@ div
 					min-width: 350px
 					max-width: calc(100vw - 240px) !important
 				&.find
-					margin-bottom: 0px
+					margin-bottom: 2px
 					div
 						flex-wrap: nowrap
 
